--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "immer": "^9.0.12",
     "jotai": "^1.5.3",
     "next": "12.0.10",
     "react": "17.0.2",
