--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "immer": "^9.0.12",
-    "jotai": "^1.5.3",
+    "immer": "9.0.12",
+    "jotai": "1.5.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,7 +19,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.5.5"
   }
 }
