--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "1.8.3",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "framer-motion": "6.2.6",
     "immer": "9.0.12",
     "jotai": "1.6.0",
     "next": "12.1.0",
