--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "preserveConstEnums": true,
+    "useDefineForClassFields": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
