--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "gomoku",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:path": "pathpida --watch",
+    "build": "pathpida && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +17,8 @@
     "immer": "9.0.12",
     "jotai": "1.6.0",
     "next": "12.1.0",
+    "npm-run-all": "^4.1.5",
+    "pathpida": "0.18.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
