--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:path": "pathpida --watch",
     "build": "pathpida && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "game": "ts-node ./scripts/game.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "1.8.6",
@@ -27,6 +28,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "ts-node": "^10.6.0",
     "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.6.2"
   }
